--- a/welcome.html
+++ b/welcome.html
@@ -167,9 +167,7 @@ we don't have an account and should hide them. No account == no guest account ei
 </style>
 
 <div class="mx_Parent">
-    <a href="https://riot.im" target="_blank" rel="noopener">
-        <img src="welcome/images/logo.svg" alt="" class="mx_Logo"/>
-    </a>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/Wikimedia-logo_black.svg/54px-Wikimedia-logo_black.svg.png" alt="" class="mx_Logo"/>
     <h1 class="mx_Header_title">Wikimedia chat</h1>
     <h4 class="mx_Header_subtitle">Welcome to Wikimedia's Matrix instance. This is a limited-time trial instance. <b><a href="https://phabricator.wikimedia.org/T230531">More information</a></b></h4>
     <div class="mx_ButtonGroup">
